[tool.poetry]
name = "snow"
version = "0.1.0"
description = ""
authors = ["Jordi Calafat <jcalafat97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
schedule = "^1.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
